style.css
/*disable auto zooming on typing in input field*/
@media screen and (-webkit-min-device-pixel-ratio:0) { 
  select:focus,
  textarea:focus,
  input:focus {
    font-size: 16px;
    background: #eee;
  }
}

input {
    font-size: 20em;
}
html,
body,
table {
    width: 100%;
    height: 100%;
    margin: 0px;
    font-family: sans-serif;
    font-size: 50px;
    background: black;
}

table {
    border-collapse: collapse;
}

.player {
    -webkit-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    -o-transform: rotate(0deg);
    transform: rotate(0deg);
    width: 100%;
    height: 100%;
    margin: auto;
    text-align: center;
    background: linear-gradient( 135deg, #232323, #232323, #336600, #E13C1E, #0066cc, #dce0bb, #dce0bb);
}

.texture {
    height: 100%;
    background-image: url("images/mottled_BG_1.png");
    background-repeat: no-repeat;
    background-position: center center;
}

.box {
    margin: auto;
    padding-top: 20px;
    padding-bottom: 9px;
    position: relative;
    top: 50%;
    width: 95%;
    -webkit-transform: translatey(-50%);
    -moz-transform: translatey(-50%);
    -ms-transform: translatey(-50%);
    -o-transform: translatey(-50%);
    transform: translatey(-50%);
    background-color: rgba(0, 0, 0, 0.5);
    border-radius: 20px;
}

@media (max-width: 580px) {
    .box {
        width: 100%;
    }
}

.playerName {
    width: 90%;
    text-align: center;
    margin-top: 15px;
    border-radius: 10px;
    font-size: 40px;
    border: 2px #DDDDDD solid;
    background: #DDDDDD;
}

.xcrement {
    display: block;
    margin: auto;
}

.lifeTotal {
    color: white;
    display: block;
    margin: auto;
    font-size: 200%;
}

button {
    border-radius: 5px;
    border: 2px solid #DDDDDD;
    background: #DDDDDD;
    margin-bottom: 5px;
    margin-top: 5px;
    margin-right: 5px;
    margin-left: 5px;
    font-size: 40px;
    height: 60px;
    width: 60px;
    color: black;
}

.clearBtn {
    font-size: 40px;
    display: block;
    margin-left: auto;
    margin-right: auto;
    width: 60%;
}

.addBtn {
    width: 100px;
    height: 100px;
}

.hudBtn{
    width: auto;
}
.flipBtn {
    font-size: 40px;
    display: block;
    margin-left: auto;
    margin-right: auto;
    width: 60%;
}

.colorsList {
    border: 2px #DDDDDD solid;
    background: #DDDDDD;
    font-size: 30px;
    text-align: center;
    display: block;
    margin: auto;
    margin-bottom: 5px;
    border-radius: 10px;
    width: 80%;
}

.manaBtn {
    background-color: black;
    border: none;
    background-position: center center;
    background-repeat: no-repeat;
    background-size: 90%;
    border-radius: 30px;
    height: 50px;
    width: 50px;
}

.B {
    background-image: url("images/B_BW.png");
}

.G {
    background-image: url("images/G_BW.png");
}

.R {
    background-image: url("images/R_BW.png");
}

.U {
    background-image: url("images/U_BW.png");
}

.W {
    background-image: url("images/W_BW.png");
}

.playerSlots {
    margin-right: -5px;
    margin-left: -5px;
    border: none;
    border-spacing: 0;
}

#allPLayers {
    width: 100%;
}

.safeButtons {
    float: left;
    display: inline;
}

.warningButtons {
    display: inline;
    float: right;
}

.warningButtons button{
    background-color: red;
    border-color: red;
}

